<resources>
    <!-- Partie Connexion et Inscription -->
    <string name="app_name">JuicyMuscle</string>
    <string name="connexion">Connexion</string>
    <string name="e_mail">E-mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="accueil">Accueil</string>
    <string name="inscription">Inscription</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <!--Partie Entrainement -->
    <string name="editer">Edit</string>
    <string name="prochain_exercice">Prochain Excercice :</string>
    <!-- Exercice Pecs-->
    <string name="developpe_couché_barre">Développé couché (barre)</string>
    <string name="developpe_incliné_barre">Développé incliné (barre)</string>
    <string name="developpe_décliné_barre">Développé décliné (barre)</string>
    <string name="developpe_couché_haltère">Développé couché (haltère)</string>
    <string name="developpe_incline_haltère">Développé incliné (haltère)</string>
    <string name="pompes">Pompes</string>
    <!--Exercice Dos -->
    <string name="traction">Traction</string>
    <string name="traction_assiste">Traction assisté</string>
    <string name="traction_leste">Traction lesté</string>
    <string name="tirage_horizontal_poulie">Tirage à la poulie</string>
    <string name="souleve_de_terre">Soulevé de terre</string>
    <string name="rowing_barre">Rowing Bar</string>
    <string name="exercices_disponibles">Exercices disponibles :</string>
    <string name="entrainement">Entrainement</string>
    <string name="mon_programme">Mon programme :</string>
    <string name="programmes">Programmes</string>
    <string name="nouveau_programme">Nouveau programme</string>
    <string name="settings">settings</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="creer">creer</string>
    <string name="nom_du_programme">Nom du programme</string>


</resources>