<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.HomeActivity"

    android:orientation="vertical"
    android:background="@color/greyBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/inscription"
        android:textSize="30sp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/main_edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="80dp"
        android:hint="@string/nom_d_utilisateur"
        android:drawableEnd="@drawable/ic_username"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:theme="@style/EditTextTheme"/>

    <EditText
        android:id="@+id/main_edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/e_mail"
        android:drawableEnd="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:theme="@style/EditTextTheme"/>

    <EditText
        android:id="@+id/main_edittext_mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/mot_de_passe"
        android:drawableEnd="@drawable/ic_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:theme="@style/EditTextTheme"/>

    <EditText
        android:id="@+id/main_edittext_mdpconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:hint="Confirmer le mot de passe"
        android:drawableEnd="@drawable/ic_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:theme="@style/EditTextTheme"/>

    <TextView
        android:id="@+id/main_textviex_errormsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:textColor="@color/redError"/>

    <Button
        android:id="@+id/main_button_inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/s_inscrire"
        android:textColor="@color/green"
        android:backgroundTint="@color/lightGrey"/>

</LinearLayout>
