<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.HomeActivity"

    android:orientation="vertical"
    android:background="@color/greyBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/accueil"
        android:textSize="30sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/home_textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginVertical="20dp"
        android:textSize="20sp"
        android:text="@string/programmes"
        android:textColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recyclerview_listprogrammes"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/home_button_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nouveau_programme"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="12sp"
        android:textColor="@color/green" />


</LinearLayout>
