<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraints"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/greyBackground"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".controller.TrainingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_arrow_back"
        android:text="@string/accueil"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:tint="#FFFFFF"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prochain_exercice"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:tint="#FFFFFF"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="364dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.00.00"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:tint="#FFFFFF"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_outline_timer"
        android:text="@string/editer"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:tint="#FFFFFF"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="316dp"
        tools:layout_editor_absoluteY="16dp" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="406dp"
        android:layout_height="68dp"
        android:layout_marginBottom="4dp"
        android:drawableStart="@drawable/ic_outline_skip_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tirage à la poulie"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:tint="@color/white"
            tools:ignore="DuplicateIds,MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30sp"
            app:srcCompat="@drawable/ic_outline_skip_next" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="219dp"
        android:background="@color/lightGrey"
        tools:ignore="MissingConstraints,Orientation"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="117dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightGrey"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="117dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:tint="#FFFFFF"
                tools:ignore="DuplicateIds,MissingConstraints"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/editer"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:tint="#FFFFFF"
                tools:ignore="DuplicateIds,MissingConstraints"
                tools:layout_editor_absoluteX="316dp"
                tools:layout_editor_absoluteY="16dp" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:tint="#FFFFFF"
            tools:ignore="DuplicateIds,MissingConstraints"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/editer"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:tint="#FFFFFF"
            tools:ignore="DuplicateIds,MissingConstraints"
            tools:layout_editor_absoluteX="316dp"
            tools:layout_editor_absoluteY="16dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="217dp"
        android:background="@color/lightGrey"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="402dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:tint="#FFFFFF"
            tools:ignore="DuplicateIds,MissingConstraints"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/editer"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:tint="#FFFFFF"
            tools:ignore="DuplicateIds,MissingConstraints"
            tools:layout_editor_absoluteX="316dp"
            tools:layout_editor_absoluteY="16dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
